<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:id="@+id/c"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="3dp"

    android:padding="10dp"
    card_view:cardBackgroundColor="#374149"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp"
    card_view:layout_constraintTop_toTopOf="parent"
    tools:layout_editor_absoluteX="4dp">



        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#D2322D2D">


                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/delete"
                    android:src="@android:drawable/ic_delete"
                    app:layout_constraintBottom_toTopOf="@+id/button9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton2"
                    app:layout_constraintVertical_bias="1.0"
                   />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:srcCompat="@android:drawable/ic_menu_edit" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:text="@string/username"
                    android:textColor="#F8F5F5"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cardLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/Label"
                    android:textColor="#FFFEFE"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/imageButton2"
                    app:layout_constraintHorizontal_bias="0.534"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="#614B47"
                    android:text="@string/copyUsername"
                    android:textColor="#FFFFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:backgroundTint="#614B47"
                    android:text="@string/copyPassword"
                    android:textColor="#FFFFFFFF"
                    app:layout_constraintBaseline_toBaselineOf="@+id/button8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/button8" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="12dp"
                    android:contentDescription='@string/VisibilyOf'
                    android:scaleX="1"
                    android:scaleY="1"
                    app:layout_constraintEnd_toStartOf="@+id/imageButton"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/password"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    tools:srcCompat="@drawable/closed" />

                <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/password"
                    android:textColor="#FDFDFD"
                    android:textSize="16sp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </HorizontalScrollView>



</androidx.cardview.widget.CardView>

