<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    tools:ignore="ExtraText">


        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


    <EditText
        android:id="@+id/editText"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="179dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:backgroundTint="#614B47"
            android:onClick="signIn"
            android:text="@string/signIn"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/Password"
            app:layout_constraintTop_toBottomOf="@+id/Password" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:backgroundTint="#614B47"
            android:onClick="signUp"
            android:text="@string/signUp"
            android:textColor="#FFFFFF"
            app:layout_constraintBaseline_toBaselineOf="@+id/button2"
            app:layout_constraintStart_toEndOf="@+id/button2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="166dp"
        android:layout_height="136dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        app:srcCompat="@drawable/logoinapp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>